--- a/pom.xml
+++ b/pom.xml
@@ -6,43 +6,49 @@
 
     <groupId>com.wangdecheng</groupId>
     <artifactId>mycodes</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>nettybook</module>
+    </modules>
 
-    <repositories>
-        <repository>
-            <id>ainemo</id>
-            <name>Nexus ainemo</name>
-            <url>http://10.170.209.180:8081/nexus/content/groups/public/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>opensesame</id>
-            <name>Alibaba OpenSource Repsoitory</name>
-            <url>http://code.alibabatech.com/mvn/releases/</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>nexus-ainemo</id>
-            <name>Nexus ainemo</name>
-            <url>http://10.170.209.180:8081/nexus/content/groups/public/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>ainemo</id>-->
+            <!--<name>Nexus ainemo</name>-->
+            <!--<url>http://10.170.209.180:8081/nexus/content/groups/public/</url>-->
+            <!--<releases>-->
+                <!--<enabled>true</enabled>-->
+            <!--</releases>-->
+            <!--<snapshots>-->
+                <!--<enabled>true</enabled>-->
+            <!--</snapshots>-->
+        <!--</repository>-->
 
-        </pluginRepository>
-    </pluginRepositories>
+        <!--<repository>-->
+            <!--<id>opensesame</id>-->
+            <!--<name>Alibaba OpenSource Repsoitory</name>-->
+            <!--<url>http://code.alibabatech.com/mvn/releases/</url>-->
+            <!--<snapshots>-->
+                <!--<enabled>false</enabled>-->
+            <!--</snapshots>-->
+        <!--</repository>-->
+    <!--</repositories>-->
+
+    <!--<pluginRepositories>-->
+        <!--<pluginRepository>-->
+            <!--<id>nexus-ainemo</id>-->
+            <!--<name>Nexus ainemo</name>-->
+            <!--<url>http://10.170.209.180:8081/nexus/content/groups/public/</url>-->
+            <!--<releases>-->
+                <!--<enabled>true</enabled>-->
+            <!--</releases>-->
+            <!--<snapshots>-->
+                <!--<enabled>true</enabled>-->
+            <!--</snapshots>-->
+
+        <!--</pluginRepository>-->
+    <!--</pluginRepositories>-->
 
     <dependencies>
         <dependency>
@@ -51,11 +57,12 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-all</artifactId>
-            <version>5.9.1</version>
-        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.apache.activemq</groupId>-->
+            <!--<artifactId>activemq-all</artifactId>-->
+            <!--<version>5.9.1</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
@@ -154,6 +161,7 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.msgpack</groupId>
             <artifactId>msgpack</artifactId>
@@ -164,6 +172,11 @@
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
             <version>3.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+            <version>RELEASE</version>
         </dependency>
     </dependencies>
 
